# Financial-AI-System

./: .gitignore  main.py  pyproject.toml  readme.md  requirements.txt  vercel.json
api/: index.py
backend/: api.py  config.py  requirements.txt
backend/core/data_sources/: alpha_vantage.py  coindesk.py  fred.py  newsapi.py  polygon.py  sec_edgar.py  tavily.py  yahoo_finance.py
backend/core/rag/: adaptive_rag.py  corrective_rag.py  financial_workflow.py  self_rag.py
client/: next.config.ts  package-lock.json  package.json
client/app/: layout.tsx  page.tsx
client/app/chat/: page.tsx
client/components/: chat-message.tsx  navbar.tsx
frontend/: index.html  script.js  style.css
